--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/inicio.png
+    - assets/img/presentacion.png
+    
 
     
   #   - images/a_dot_burr.jpeg
